# weekly_code

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  main.h
inc/labs/: labs.cpp  labs.h
inc/week/: w.cpp  w.h
inc/week10/: w10.cpp  w10.h
inc/week11/: w11.cpp  w11.h
inc/week12/: w12.cpp  w12.h
inc/week3/: CMakeLists.txt  w3.cpp  w3.h
inc/week4/: CMakeLists.txt  w4.cpp  w4.h
inc/week6/: w6.cpp  w6.h
inc/week7/: CMakeLists.txt  w7.cpp  w7.h
inc/week8/: w8.cpp  w8.h
inc/week9/: w9.cpp  w9.h
